fixed education overflow

--- a/docs/style.css
+++ b/docs/style.css
@@ -508,7 +508,7 @@ section.education-introduction > div {
 section.education-options {
   justify-content: center;
   background-color: var(--brown-accent);
-  padding: 1rem;
+  padding: 1rem 0rem;
 }
 
 .heat-option {
